--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,7 @@ stages:
           inputs:
             command: 'restore'
             projects: '*.sln'
+            feedsToUse: 'select'
 
         - task: DotNetCoreCLI@2
           displayName: Build
